--- a/J4C2/pom.xml
+++ b/J4C2/pom.xml
@@ -5,6 +5,37 @@
     <artifactId>J4C2</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
@@ -49,4 +80,49 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <scm>
+        <connection>scm:git:git@github.com:rterp/J4C2.git</connection>
+        <developerConnection>scm:git:git@github.com:rterp/J4C2.git</developerConnection>
+        <url>git@github.com:rterp/J4C2.git</url>
+        <!--<tag>2.0.2-23</tag>-->
+        <!--<tag>GMapsFX-2.12.0</tag>-->
+    </scm>
+    
+    <profiles>
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>                                      
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                   
+                </plugins>
+            </build>
+        </profile>
+    </profiles>    
+    
+    <distributionManagement>
+        <repository>
+            <id>bintray-rterp-maven</id>
+            <url>https://api.bintray.com/maven/tamarjfrog/maven-repo/maven-example/;publish=1</url>
+        </repository>
+    </distributionManagement>    
 </project>
