--- a/J4C2/pom.xml
+++ b/J4C2/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sumzerotrading</groupId>
     <artifactId>J4C2</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <build>
         <plugins>
@@ -86,7 +86,8 @@
         <url>git@github.com:rterp/J4C2.git</url>
         <!--<tag>2.0.2-23</tag>-->
         <!--<tag>GMapsFX-2.12.0</tag>-->
-    </scm>
+      <tag>HEAD</tag>
+  </scm>
     
     <profiles>
         <profile>
@@ -122,7 +123,7 @@
     <distributionManagement>
         <repository>
             <id>bintray-rterp-maven</id>
-            <url>https://api.bintray.com/maven/tamarjfrog/maven-repo/maven-example/;publish=1</url>
+            <url>https://api.bintray.com/maven/rterp/maven/J4C2/;publish=1</url>
         </repository>
     </distributionManagement>    
 </project>
