--- a/J4C2/pom.xml
+++ b/J4C2/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sumzerotrading</groupId>
     <artifactId>J4C2</artifactId>
-    <version>1.0.0-4-SNAPSHOT</version>
+    <version>1.0.0-4</version>
     <packaging>jar</packaging>
     <build>
         <plugins>
@@ -86,7 +86,7 @@
         <url>git@github.com:rterp/J4C2.git</url>
         <!--<tag>2.0.2-23</tag>-->
         <!--<tag>GMapsFX-2.12.0</tag>-->
-      <tag>HEAD</tag>
+      <tag>J4C2-1.0.0-4</tag>
   </scm>
     
     <profiles>
