--- a/J4C2/pom.xml
+++ b/J4C2/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sumzerotrading</groupId>
     <artifactId>J4C2</artifactId>
-    <version>1.0.0-5-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <build>
         <plugins>
